# gazebo-sitl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
gzsitl/: CMakeLists.txt  defines.hh  gzsitl_plugin.cc  gzsitl_plugin.hh  gzsitl_visflags_plugin.cc  gzsitl_visflags_plugin.hh  mavserver.cc  mavserver.hh
models/: CMakeLists.txt
models/gzsitl_coav_target/: model.config  model.sdf
models/gzsitl_drone/: model.config  model.sdf
models/gzsitl_mission_target/: model.config  model.sdf
models/gzsitl_perm_targ_ctrl/: model.config  model.sdf
models/gzsitl_perm_targ_vis/: model.config  model.sdf
models/gzsitl_quadcopter/: model.config  model.sdf
models/gzsitl_subs_targ_ctrl/: model.config  model.sdf
models/gzsitl_subs_targ_vis/: model.config  model.sdf
models/gzsitl_target/: model.config  model.sdf
parameters/: gzsitl.parm
world/: gzsitl_drone_target.world
